netoyage dee code meilleure gestion des erreurs et des logs ajout des routes admin/settings suppressions des codes réalisés par les middlewares externes

--- a/config/default.yaml
+++ b/config/default.yaml
@@ -46,7 +46,8 @@ db:
 host: localhost
 port: 10010
 basePath: /
-auth:
+
+security:
   bearer:
     # the secret must be one of
     # - secret : the shared secret string
