--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "scripts": {
     "start": "node server.js",
     "start_debug": "DEBUG=horses-ref:* npm start",
-    "test_api": "mocha test/api/controllers/*.js",
-    "test_auth": "mocha test/api/helpers/security/securityHandlers.js",
+    "test_api": "mocha test/api/*/*.js",
     "test_apî_debug": "DEBUG=\"horses-ref:*,mocha*\" npm run test_api"
   },
   "dependencies": {
-    "ajv": "^6.1.1",
+    "ajv": "^6.5.2",
     "axios": "^0.18.0",
     "basic-auth": "^2.0.0",
     "body-parser": "^1.18.3",
@@ -19,13 +18,14 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
-    "js-yaml": "^3.10.0",
+    "js-yaml": "^3.12.0",
     "jsonwebtoken": "^8.1.0",
     "loader-mw": "~1.0.0",
     "mongoose": "^5.1.7",
     "morgan": "~1.9.0",
-    "node-sass-middleware": "0.9.8",
+    "node-sass-middleware": "^0.11.0",
     "req-custom": "^1.0.1",
+    "security-mw": "file:../../mw/security-mw",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
@@ -47,7 +47,7 @@
     "should-http": "^0.1.1",
     "style-loader": "^0.20.2",
     "supertest": "^1.0.0",
-    "swagger-editor": "^3.2.5",
+    "swagger-editor": "^3.6.1",
     "webpack": "^3.11.0",
     "webpack-merge": "^4.1.2"
   }
