--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "morgan": "~1.9.0",
     "node-sass-middleware": "^0.11.0",
     "req-custom": "^1.0.1",
-    "security-mw": "file:../../mw/security-mw",
+    "security-mw": "https://github.com/benco1967/security-mw.git",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
