--- a/package.json
+++ b/package.json
@@ -9,46 +9,48 @@
     "test_apî_debug": "DEBUG=\"horses-ref:*,mocha*\" npm run test_api"
   },
   "dependencies": {
-    "ajv": "^6.5.2",
+    "ajv": "^6.6.1",
     "axios": "^0.18.0",
-    "basic-auth": "^2.0.0",
+    "basic-auth": "^2.0.1",
     "body-parser": "^1.18.3",
-    "config": "^1.30.0",
+    "config": "^1.31.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
-    "express": "~4.15.5",
+    "express": "^4.16.4",
     "js-yaml": "^3.12.0",
-    "jsonwebtoken": "^8.1.0",
+    "jsonwebtoken": "^8.4.0",
     "loader-mw": "~1.0.0",
-    "mongoose": "^5.1.7",
-    "morgan": "~1.9.0",
+    "mongoose": "^5.3.14",
+    "morgan": "^1.9.1",
     "node-sass-middleware": "^0.11.0",
+    "react-jsonschema-form": "^1.0.6",
     "req-custom": "^1.0.1",
-    "security-mw": "https://github.com/benco1967/security-mw.git",
-    "serve-favicon": "~2.4.5"
+    "security-mw": "git+https://github.com/benco1967/security-mw.git",
+    "serve-favicon": "~2.4.5",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.18",
-    "copy-webpack-plugin": "^4.5.2",
+    "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^0.28.10",
-    "html-webpack-include-assets-plugin": "^1.0.3",
+    "html-webpack-include-assets-plugin": "^1.0.6",
     "html-webpack-plugin": "^2.30.1",
-    "mocha": "^5.0.4",
-    "nodemon": "^1.14.11",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "mocha": "^5.2.0",
+    "nodemon": "^1.18.7",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
     "sass-loader": "^6.0.7",
-    "should": "^7.1.0",
+    "should": "^13.2.3",
     "should-http": "^0.1.1",
     "style-loader": "^0.20.2",
-    "supertest": "^1.0.0",
-    "swagger-editor": "^3.6.1",
+    "supertest": "^3.3.0",
+    "swagger-editor": "^3.6.16",
     "webpack": "^3.11.0",
-    "webpack-merge": "^4.1.2"
+    "webpack-merge": "^4.1.4"
   }
 }
